--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
+  flutter_lints: ^3.0.0
 
-  flutter_lints: ^3.0.0 # Linting rules for Flutter projects
+flutter_launcher_icons:
+      android: "launcher_icon"
+
+      image_path: "assets/icon.png"
+
+   # Linting rules for Flutter projects
 
 flutter:
   uses-material-design: true # Includes Material Design icons by default
